# Machine_Learning_08

./: .gitignore  Car_price.ipynb  README.md  day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  main.py  penguins.ipynb  pyproject.toml  tatinic.ipynb
